src/objects/Notification_Message_Engine__mdt.object
<CustomObject>
    <fields>
        <fullName>additional_validation_class_desc__c</fullName>
        <label>Additional Validation Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>language_code_id__c</fullName>
        <label>Language Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message_structure__c</fullName>
        <label>Message Structure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>object_api_name__c</fullName>
        <label>Object APIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_class_desc__c</fullName>
        <label>Recipent Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Notification Message Engine</label>
    <pluralLabel>Notification Message Engine</pluralLabel>
</CustomObject>